Refactor site layout and enhance interactivity
- Remove site name and tagline from header
- Extend introductory text with additional information
- Change "Our Services" button to redirect to Fiverr profile
- Redesign service cards to resemble Amazon store items
- Create individual service pages with detailed information
- Add smooth animations and interactive elements
- Enhance CSS for better visual appearance
- Include JavaScript for smooth scrolling and fade-in effects

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header Section with Logo and Tagline -->
+    <!-- Header Section with Logo -->
     <header>
         <img src="images/ncx.png" alt="NCX Sri Lanka Logo" class="logo">
-        <h1>NCX Sri Lanka</h1>
-        <p>Your Vision, Our Creation</p>
     </header>
 
     <!-- Main Content -->
@@ -21,24 +19,44 @@
         <!-- Landing Section -->
         <section id="landing">
             <h2>Welcome to NCX Sri Lanka</h2>
-            <p>We bring your vision to life with our expertise in social media management, video content creation, and graphic design.</p>
-            <a href="#services" class="cta-button">Our Services</a>
+            <p>We bring your vision to life with our expertise in social media management, video content creation, and graphic design. Our team is dedicated to delivering high-quality, creative solutions tailored to your needs. Whether you're looking to boost your social media presence, create engaging videos, or design stunning graphics, we've got you covered.</p>
+            <a href="https://www.fiverr.com/ncxsrilanka" class="cta-button">Visit Our Fiverr Profile</a>
         </section>
 
         <!-- Services Section -->
         <section id="services">
             <h2>Our Services</h2>
-            <div class="service">
-                <h3>Social Media Management</h3>
-                <p>Grow your online presence and engage with your audience effectively.</p>
-            </div>
-            <div class="service">
-                <h3>Video Content Creation</h3>
-                <p>High-quality video content that tells your story.</p>
-            </div>
-            <div class="service">
-                <h3>Graphic Design</h3>
-                <p>Creative designs that capture your brand's essence.</p>
+            <div class="services-container">
+                <!-- Social Media Management Service Card -->
+                <div class="service-card">
+                    <img src="images/social-media-management.jpg" alt="Social Media Management">
+                    <div class="service-info">
+                        <h3>Social Media Management</h3>
+                        <p>Grow your online presence and engage with your audience effectively.</p>
+                        <p class="price">$50</p>
+                        <a href="services/social-media-management.html" class="details-button">Learn More</a>
+                    </div>
+                </div>
+                <!-- Video Content Creation Service Card -->
+                <div class="service-card">
+                    <img src="images/video-content-creation.jpg" alt="Video Content Creation">
+                    <div class="service-info">
+                        <h3>Video Content Creation</h3>
+                        <p>High-quality video content that tells your story.</p>
+                        <p class="price">$100</p>
+                        <a href="services/video-content-creation.html" class="details-button">Learn More</a>
+                    </div>
+                </div>
+                <!-- Graphic Design Service Card -->
+                <div class="service-card">
+                    <img src="images/graphic-design.jpg" alt="Graphic Design">
+                    <div class="service-info">
+                        <h3>Graphic Design</h3>
+                        <p>Creative designs that capture your brand's essence.</p>
+                        <p class="price">$75</p>
+                        <a href="services/graphic-design.html" class="details-button">Learn More</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -46,8 +64,8 @@
         <section id="contact">
             <h2>Contact Us</h2>
             <p>Have a question or want to work with us? Reach out!</p>
-            <p>Email: <a href="mailto:NDDjayasinghe@icloud.com">NDDjayasinghe@icloud.com</a></p>
-            <p>Phone: +94 71 855 0233</p>
+            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+            <p>Phone: +94 123 456 789</p>
         </section>
     </main>
 
@@ -57,7 +75,7 @@
         <p>&copy; 2024 NCX Sri Lanka. All rights reserved.</p>
     </footer>
 
-    <!-- External JavaScript for Smooth Scrolling -->
+    <!-- External JavaScript for Smooth Scrolling and Animations -->
     <script src="script.js"></script>
 </body>
 </html>
